@@ -6,6 +6,9 @@ IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 2007/11/16
 	* Added error messages when trying to place objects on invalid map coords
 	* Fixed Divine Protection working against players (bugreport:410)
+	* Added 2 new status changes for Life and Regeneration Potions [Zephyrus]
+	- Fixed some items boxes giving wrong tamings.
+	- Fixed another item giving 48 gladius[3]
 2007/11/15
 	* Fixed some homunculus skill offset calculation mistakes (bugreport:363)
 2007/11/14
