@@ -37,6 +37,10 @@
 	2376 General's_Plate_Mail	Increases heal recovery effectiveness on you by 10%
 
 =======================
+11/16
+	* Rev. 11734 Corrected some taming item boxes. [Zephyrus]
+	- Fixed another item giving 48 Gladius[3]
+	- Added the Life Potion and Regeneration Potion functions.
 11/13
 	* Rev. 11720 Corrected some of the ep. 12 accessory bonuses. [L0ne_W0lf] 
 	- Rev. 11722 Added some premium items (fireworks items and MDef Potions) [Zephyrus]
